--- a/ylesanne22.html
+++ b/ylesanne22.html
@@ -73,7 +73,7 @@
                 document.documentElement.style.setProperty('--font-color', '#000');
             }
 
-            // Salvesta kasutaja valik Local Storage'i
+            // Salvesta enda valik Local Storage'i
             localStorage.setItem('kasutajaTeema', teema);
         }
     </script>
